--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.JOC"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
+            android:name=".RecordsActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
